[package]
name = "puncher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
num_cpus = "1.16.0"
tokio = { version = "1.44.2", features = ["full"] }



[profile.release]
opt-level = 3  # Optimize for size
strip = true
codegen-units = 1


[profile.mips]
inherits="release"
opt-level = "z"  # Optimize for size instead of speed
# lto = true       # Link-Time Optimization
codegen-units = 1 # Slower build but smaller binary
panic = "abort"   # No panic unwinding (saves space)
strip = true      # Remove debug symbols